syntax = "proto3";

package keyauth.role;
option go_package = "github.com/infraboard/keyauth/pkg/role";

import "pkg/role/pb/request.proto";
import "pkg/role/pb/role.proto";

// Service 角色服务
service RoleService {
	rpc CreateRole(CreateRoleRequest) returns(Role);
	rpc QueryRole(QueryRoleRequest) returns(Set);
	rpc DescribeRole(DescribeRoleRequest) returns(Role);
	rpc DeleteRole(DeleteRoleRequest) returns(Role);
	rpc QueryPermission(QueryPermissionRequest) returns(PermissionSet);
	rpc DescribePermission(DescribePermissionRequest) returns(Permission);
	rpc AddPermissionToRole(AddPermissionToRoleRequest) returns(PermissionSet);
	rpc RemovePermissionFromRole(RemovePermissionFromRoleRequest) returns(PermissionSet);
	rpc UpdatePermission(UpdatePermissionRequest) returns(Permission);
}